[package]
name = "clusterclub"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = "0.6"
pingora-core = "0.6"
pingora-load-balancing = "0.6"
pingora-proxy = "0.6"
memberlist = { version = "0.6", features = ["tokio", "quic", "encryption", "snappy"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
async-trait = "0.1"
